--- a/ProjetoIntegrador/1-login.html
+++ b/ProjetoIntegrador/1-login.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rango Top</title>
-    <script src="senha.js"></script>
-    <link rel="stylesheet" href="/CSS/style.css">
-</head>
-<header>
-    <a href="1-login.html"><img src="/img/logo-sem-fundo.png" alt="" style="height: 100px;"></a>
-</header>
-<body>
-  <div class="container1 inicial">
-    <div class="form">
-      <h3 class="title1">Faça seu Login</h3>
-      <form action="#" id="form">
-        <div class="form-group1">
-          <input type="email" name="email"required><label>Email</label>
-        </div>
-        <div class="form-group1">
-          <input type="password" name="senha" required id="senha"><label>Senha</label>
-        </div>
-        <div class="row1">
-            <a href="Esqueceusenha.html">Esqueceu a senha</a>
-        </div>
-        <input type="button" value="Entrar" class="submit1" onclick="comparar()">
-        <div class="row1">
-          <p>Não é cadastrado? <a href="confirma.html">Cadastre-se</a></p>
-        </div>
-      </form>
+    <link rel="stylesheet" href="CSS/style.css" />
+  </head>
+  <header>
+    <a href="1-login.html"
+      ><img src="img/logo-sem-fundo.png" alt="" style="height: 100px"
+    /></a>
+  </header>
+  <body>
+    <div class="container1 inicial">
+      <div class="form">
+        <h3 class="title1">Faça seu Login</h3>
+        <form action="TelaInicial.html" id="form">
+          <div class="form-group1">
+            <input type="email" name="email" required /><label>Email</label>
+          </div>
+          <div class="form-group1">
+            <input type="password" name="senha" required id="senha" /><label
+              >Senha</label
+            >
+          </div>
+          <div class="row1">
+            <a href="9-Esqueceusenha.html">Esqueceu a senha</a>
+          </div>
+          <button type="submit" class="submit1">Entrar</button>
+          <div class="row1">
+            <p>Não é cadastrado? <a href="2-CNPJ-CPF.html">Cadastre-se</a></p>
+          </div>
+        </form>
+      </div>
     </div>
-  </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.js"></script>
-  <script src="/JS/register.js"></script>
-</body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.js"></script>
+    <script src="JS/register.js"></script>
+  </body>
 </html>
