--- a/ProjetoIntegrador/9-Esqueceusenha.html
+++ b/ProjetoIntegrador/9-Esqueceusenha.html
@@ -1,30 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rango Top</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css" />
     <script src="./cliente.js"></script>
-</head>
-<header>
-  <a href="1-login.html"><img src="/img/logo-sem-fundo.png" alt="Logo da empresa RangoTop" style="height: 200px;"></a>
-</header>
-<body>
+  </head>
+  <header>
+    <a href="1-login.html"
+      ><img
+        src="/img/logo-sem-fundo.png"
+        alt="Logo da empresa RangoTop"
+        style="height: 200px"
+    /></a>
+  </header>
+  <body>
     <a href="1-login.html"></a>
     <div class="container3">
       <div class="form3 text-esqueceu">
         <h2 class="title3">Esqueceu sua senha?</h2>
-        <h3 class="subtitle">Confirme seu e-mail e enviaremos instruções a você.</h3>
+        <h3 class="subtitle">
+          Confirme seu e-mail e enviaremos instruções a você.
+        </h3>
         <form>
-        <div class="email-esqueceu">
-          <label for="email">Email</label>
-            <input type="email" requer id="email" name="email" placeholder="Zequinha@gmail.com">
-        </div>
-          <input type="button" value="Enviar" class="submit1">
+          <div class="email-esqueceu">
+            <label for="email">Email</label>
+            <input
+              type="email"
+              requer
+              id="email"
+              name="email"
+              placeholder="Zequinha@gmail.com"
+            />
+          </div>
+          <input type="button" value="Enviar" class="submit1" />
         </form>
+      </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
