--- a/ProjetoIntegrador/4-cadastroprod.html
+++ b/ProjetoIntegrador/4-cadastroprod.html
@@ -1,106 +1,146 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="CSS/style.css" />
   </head>
-<header>
-  <nav class="navbar navbar-dark bg-dark d-flex align-self-center justify-content-between">
-  <a class="navbar-brand" href="1-login.html"><img src="/img/logo-sem-fundo.png" alt="Logo da empresa RangoTop" id="logo-tela-cpf" style="max-height: 200px;"></a>
-    <div class="d-flex align-self-center justify-content-between ">
-    <a href="Loja.html" class="btn-6">Lojas</a>
-    <a href="5-configuracao.html" class="btn-6">Configuração</a>
-      <form class="form-inline my-2 my-md-0">
-        <input class="form-control" type="text" placeholder="Pesquisa" aria-label="Search">
-        <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Pesquisar</button>
-      </form>
-    </div>
-  </nav>
-</header>
-<body>
-  <main>
-    <div class="container1">
-      <form action="#" id="form">
-        <div id="usuarioCNPJ">
-          <div id="endereco">
-            <h2>Endereço</h2>
-            <label for="Rua">Rua</label>
-            <input type="text" id="Rua" name="rua">
-            <label for="Estado">Estado</label>
-            <select name="estados" id="Estado">
-              <option value="Estado">Estado</option>
-              <option value="AC">AC</option>
-              <option value="AL">AL</option>
-              <option value="AP">AP</option>
-              <option value="AM">AM</option>
-              <option value="BA">BA</option>
-              <option value="CE">CE</option>
-              <option value="ES">ES</option>
-              <option value="GO">GO</option>
-              <option value="MA">MA</option>
-              <option value="MT">MT</option>
-              <option value="MS">MS</option>
-              <option value="MG">MG</option>
-              <option value="PA">PA</option>
-              <option value="PB">PB</option>
-              <option value="PR">PR</option>
-              <option value="PE">PE</option>
-              <option value="PI">PI</option>
-              <option value="RJ">RJ</option>
-              <option value="RN">RN</option>
-              <option value="RS">RS</option>
-              <option value="RO">RO</option>
-              <option value="RR">RR</option>
-              <option value="SC">SC</option>
-              <option value="SP">SP</option>
-              <option value="SE">SE</option>
-              <option value="TO">TO</option>
-            </select>
-            <label for="Cidade">Cidade</label>
-            <input type="text" id="Cidade" name="cidade">
-            <label for="N°">N°</label>
-            <input type="number" id="N°" name="numeroCasa">
-            <label for="cep">CEP</label>
-            <input type="number" id="cep" name="cep">
+  <header>
+    <nav
+      class="navbar navbar-dark bg-dark d-flex align-self-center justify-content-between"
+    >
+      <a class="navbar-brand" href="1-login.html"
+        ><img
+          src="/img/logo-sem-fundo.png"
+          alt="Logo da empresa RangoTop"
+          id="logo-tela-cpf"
+          style="max-height: 200px"
+      /></a>
+      <div class="d-flex align-self-center justify-content-between">
+        <a href="Loja.html" class="btn-6">Lojas</a>
+        <a href="5-configuracao.html" class="btn-6">Configuração</a>
+        <form class="form-inline my-2 my-md-0">
+          <input
+            class="form-control"
+            type="text"
+            placeholder="Pesquisa"
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-light my-2 my-sm-0" type="submit">
+            Pesquisar
+          </button>
+        </form>
+      </div>
+    </nav>
+  </header>
+  <body>
+    <main>
+      <div class="container1">
+        <form action="#" id="form">
+          <div id="usuarioCNPJ">
+            <div id="endereco">
+              <h2>Endereço</h2>
+              <label for="Rua">Rua</label>
+              <input type="text" id="Rua" name="rua" />
+              <label for="Estado">Estado</label>
+              <select name="estados" id="Estado">
+                <option value="Estado">Estado</option>
+                <option value="AC">AC</option>
+                <option value="AL">AL</option>
+                <option value="AP">AP</option>
+                <option value="AM">AM</option>
+                <option value="BA">BA</option>
+                <option value="CE">CE</option>
+                <option value="ES">ES</option>
+                <option value="GO">GO</option>
+                <option value="MA">MA</option>
+                <option value="MT">MT</option>
+                <option value="MS">MS</option>
+                <option value="MG">MG</option>
+                <option value="PA">PA</option>
+                <option value="PB">PB</option>
+                <option value="PR">PR</option>
+                <option value="PE">PE</option>
+                <option value="PI">PI</option>
+                <option value="RJ">RJ</option>
+                <option value="RN">RN</option>
+                <option value="RS">RS</option>
+                <option value="RO">RO</option>
+                <option value="RR">RR</option>
+                <option value="SC">SC</option>
+                <option value="SP">SP</option>
+                <option value="SE">SE</option>
+                <option value="TO">TO</option>
+              </select>
+              <label for="Cidade">Cidade</label>
+              <input type="text" id="Cidade" name="cidade" />
+              <label for="N°">N°</label>
+              <input type="number" id="N°" name="numeroCasa" />
+              <label for="cep">CEP</label>
+              <input type="number" id="cep" name="cep" />
+            </div>
+
+            <div id="tipoDeAtendimento">
+              <h2>Tipo de Atendimento</h2>
+              <label for="Retirada">Retirada</label>
+              <input
+                type="radio"
+                name="Retirada"
+                id="Retirada"
+                name="entrega"
+              />
+              <label for="Delivery">Delivery</label>
+              <input
+                type="radio"
+                name="Delivery"
+                id="Delivery"
+                name="entrega"
+              />
+              <label for="Consumo-no-local">Consumo no local</label>
+              <input
+                type="radio"
+                name="Consumo-no-local"
+                id="Consumo-no-local"
+                name="entrega"
+              />
+            </div>
           </div>
 
-          <div id="tipoDeAtendimento">
-            <h2>Tipo de Atendimento</h2>
-            <label for="Retirada">Retirada</label>
-            <input type="radio" name="Retirada" id="Retirada" name="entrega">
-            <label for="Delivery">Delivery</label>
-            <input type="radio" name="Delivery" id="Delivery" name="entrega">
-            <label for="Consumo-no-local">Consumo no local</label>
-            <input type="radio" name="Consumo-no-local" id="Consumo-no-local" name="entrega">
-          </div>
-        </div>
+          <div id="caracteristicasProduto">
+            <h2>Caracteristicas de Produto</h2>
 
-        <div id="caracteristicasProduto">
-          <h2>Caracteristicas de Produto</h2>
-
-          <p>Nome:</p>
-          <input type="text">
-          <p>Ingredientes:</p>
-          <textarea name="Ingredientes" id="Ingredientes" cols="30" rows="5"></textarea>
-          <h2>Formas de Pagamento</h2>
-          <div>
-            <label for="Cartao">Cartão</label>
-            <input type="radio" name="Cartao" id="Cartao">
-            <label for="Pix">Pix</label>
-            <input type="radio" name="Pix" id="Pix">
-            <label for="cupom">Cupom</label>
-            <input type="radio" name="cupom" id="cupom">
+            <p>Nome:</p>
+            <input type="text" />
+            <p>Ingredientes:</p>
+            <textarea
+              name="Ingredientes"
+              id="Ingredientes"
+              cols="30"
+              rows="5"
+            ></textarea>
+            <h2>Formas de Pagamento</h2>
+            <div>
+              <label for="Cartao">Cartão</label>
+              <input type="radio" name="Cartao" id="Cartao" />
+              <label for="Pix">Pix</label>
+              <input type="radio" name="Pix" id="Pix" />
+              <label for="cupom">Cupom</label>
+              <input type="radio" name="cupom" id="cupom" />
+            </div>
           </div>
-        </div>
-      </form>
-    </div>
-  </main>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.js"></script>
-  <script src="/JS/register.js"></script>
-</body>
+        </form>
+      </div>
+    </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.js"></script>
+    <script src="/JS/register.js"></script>
+  </body>
 </html>
