--- a/ProjetoIntegrador/TelaInicial.html
+++ b/ProjetoIntegrador/TelaInicial.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tela Inicial</title>
-    <link rel="stylesheet" href="/CSS/style.css">
-</head>
-<body>
-    <img src="/img/logo-sem-fundo.png" alt="logo da empresa">
-</body>
+    <link rel="stylesheet" href="CSS/style.css" />
+  </head>
+  <body>
+    <img src="/img/logo-sem-fundo.png" alt="logo da empresa" />
+  </body>
 </html>
