--- a/ProjetoIntegrador/1-login.html
+++ b/ProjetoIntegrador/1-login.html
@@ -21,12 +21,16 @@
             <input type="email" name="email" required /><label>Email</label>
           </div>
           <div class="form-group1">
-            <input type="password" name="senha" required id="senha" /><label
-              >Senha</label
-            >
+            <input
+              minlength="6"
+              type="password"
+              name="senha"
+              required
+              id="senha"
+            /><label>Senha</label>
           </div>
           <div class="row1">
-            <a href="9-Esqueceusenha.html">Esqueceu a senha</a>
+            <p><a href="9-Esqueceusenha.html">Esqueceu a senha</a></p>
           </div>
           <button type="submit" class="submit1">Entrar</button>
           <div class="row1">
@@ -35,8 +39,5 @@
         </form>
       </div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.js"></script>
-    <script src="JS/register.js"></script>
   </body>
 </html>
