--- a/ProjetoIntegrador/2-CNPJ-CPF.html
+++ b/ProjetoIntegrador/2-CNPJ-CPF.html
@@ -10,14 +10,14 @@
   </head>
   <header>
     <a href="1-login.html"
-      ><img src="/img/logo-sem-fundo.png" alt="" style="height: 100px"
+      ><img src="img/logo-sem-fundo.png" alt="" style="height: 100px"
     /></a>
   </header>
   <body>
     <div class="container1">
       <div class="form1">
         <h1 class="title1">Criar Conta</h1>
-        <form action="#" id="form">
+        <form method="post" onsubmit="sucesso(); return false;">
           <div>
             <label>CPF</label>
             <input
@@ -43,37 +43,52 @@
             />
           </div>
           <div class="form-group1">
-            <input type="text" required /><label>Nome Completo</label>
+            <input minlength="6" type="text" required /><label
+              >Nome Completo</label
+            >
           </div>
           <div class="form-group1">
-            <input type="password" required id="senha" /><label>Senha</label>
+            <input minlength="6" type="password" required id="senha" /><label
+              >Senha</label
+            >
           </div>
           <div class="form-group1">
-            <input type="text" required /><label>Email</label>
+            <input name="email" type="email" required /><label>Email</label>
           </div>
           <div class="form-group1">
             <input
               required
+              minlength="14"
               type="text"
               onkeypress="$(this).mask('(00) 0000-00009')"
             /><label>Telefone</label>
           </div>
           <div id="cpf" class="form-group1">
             <input
+              id="inputCPF"
+              minlength="14"
               type="text"
               onkeypress="$(this).mask('000.000.000-00');"
             /><label>CPF</label>
           </div>
           <div id="cnpj" class="form-group1">
             <input
+              id="inputCNPJ"
+              minlength="18"
               type="text"
               onkeypress="$(this).mask('00.000.000/0000-00')"
             /><label>CNPJ</label>
           </div>
           <a href="TelaInicial.html">
-            <button class="submit1" type="submit">Confirmar</button>
+            <button class="submit1" type="submit">Criar conta</button>
           </a>
         </form>
+        <div class="row1">
+          <a href="1-login.html">
+            <p>Voltar</p>
+          </a>
+        </div>
+        <p id="sucesso">Conta criada com sucesso</p>
       </div>
     </div>
     <script src="JS/cliente.js"></script>
