--- a/ProjetoIntegrador/9-Esqueceusenha.html
+++ b/ProjetoIntegrador/9-Esqueceusenha.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rango Top</title>
     <link rel="stylesheet" href="CSS/style.css" />
-    <script src="./cliente.js"></script>
+    <script src="JS/cliente.js"></script>
   </head>
   <header>
     <a href="1-login.html"
       ><img
-        src="/img/logo-sem-fundo.png"
+        src="img/logo-sem-fundo.png"
         alt="Logo da empresa RangoTop"
         style="height: 200px"
     /></a>
@@ -24,10 +24,11 @@
         <h3 class="subtitle">
           Confirme seu e-mail e enviaremos instruções a você.
         </h3>
-        <form>
+        <form method="post" onsubmit="sucesso(); return false;">
           <div class="email-esqueceu">
             <label for="email">Email</label>
             <input
+              required
               type="email"
               requer
               id="email"
@@ -35,8 +36,16 @@
               placeholder="Zequinha@gmail.com"
             />
           </div>
-          <input type="button" value="Enviar" class="submit1" />
+          <button type="submit" class="submit1">
+            Enviar
+          </button>
+          <div class="row1">
+          <a href="1-login.html">
+            <p>Voltar</p>
+          </a>
+        </div>
         </form>
+        <p id="sucesso">Email enviado com sucesso</p>
       </div>
     </div>
   </body>
