--- a/ProjetoIntegrador/4-cadastroprod.html
+++ b/ProjetoIntegrador/4-cadastroprod.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Carrinho</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -43,6 +43,22 @@
   </header>
   <body>
     <main>
+      <div class="container1">
+        <div id="carrinho">
+          <h2>Carrinho</h2>
+          <img height="30px" src="img/x-tudo-duplo.jpg" alt="">
+          <p>X-tudo</p>
+          <img height="30px" src="img/hotdog.jpg" alt="">
+          <p>hotdog</p>
+          <p>Observações:</p>
+          <textarea
+            name="Ingredientes"
+            id="Ingredientes"
+            cols="30"
+            rows="2"
+          ></textarea>
+        </div>
+      </div>
       <div class="container1">
         <form action="#" id="form">
           <div id="usuarioCNPJ">
@@ -154,23 +170,10 @@
                 />
               </div>
             </div>
-              <div id="caracteristicasProduto">
-                <h2>Carrinho</h2>
-                <img height="30px" src="img/x-tudo-duplo.jpg" alt="">
-                <p>X-tudo</p>
-                <img height="30px" src="img/hotdog.jpg" alt="">
-                <p>hotdog</p>
-                <p>Observações:</p>
-                <textarea
-                  name="Ingredientes"
-                  id="Ingredientes"
-                  cols="30"
-                  rows="2"
-                ></textarea>
-              </div>
             <button class="submit1" type="submit">Enviar</button>
             </div>
           </div>
+        </div>
         </form>
       </div>
     </main>
