--- a/ProjetoIntegrador/3-carrinho.html
+++ b/ProjetoIntegrador/3-carrinho.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="CSS/style.css" />
   </head>
   <body>
-    <form class="container2">
+    <form>
+      <div id="carrinho" class="container2">
       <h1>Carrinho</h1>
       <div class="produto">
         <div class="nomeProduto">HotDog</div>
@@ -16,16 +17,16 @@
           <img src="img/hotdog.jpg" alt="" />
         </div>
         <div class="descricaoProduto">
-          Pão, 2 Salsichas, Purê, Batata palha, ketchup
+          Pão, 2 Salsichas, Purê, Batata palha, ketchup, mostarda, maionese
         </div>
         <div class="minus">
-          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="80" fill="currentColor" class="bi bi-dash-circle" viewBox="0 0 16 16">
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="80" fill="currentColor" class="bi bi-dash-circle" viewBox="0 0 16 16">
             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
             <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
           </svg>
         </div>
         <div class="plus">
-        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="80" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="80" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
           <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
           <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
         </svg>
@@ -38,23 +39,136 @@
           <img src="img/x-tudo-duplo.jpg" alt="" />
         </div>
         <div class="descricaoProduto">
-          Pão, carne 200g, queijo, alface, tomate
+          Pão, carne 200g, queijo mussarela, alface, tomate, maionese caseira
         </div>
         <div class="minus">
-          <svg xmlns="http://www.w3.org/2000/svg" width="50" height="80" fill="currentColor" class="bi bi-dash-circle" viewBox="0 0 16 16">
+          <svg xmlns="http://www.w3.org/2000/svg" width="30" height="80" fill="currentColor" class="bi bi-dash-circle" viewBox="0 0 16 16">
             <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
             <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
           </svg>
         </div>
         <div class="plus">
-        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="80" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="80" fill="currentColor" class="bi bi-plus-circle" viewBox="0 0 16 16">
           <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
           <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
         </svg>
       </div>
       <div class="qtdProduto">Quantidade: 0</div>
       </div>
-      <button class="submit1" type="submit">Confirma</button>
+
+    </div>
+    <div id="tipoAtendimento" class="container2">
+        <h2>Tipo de Atendimento</h2>
+        <div>
+          <label>Entrega</label>
+          <input
+            required
+            type="radio"
+            onclick="mostraEndereco()"
+            requer
+            id="pf"
+            name="documento"
+            value="CPF"
+          />
+        </div>
+        <div>
+          <label>Retirada</label>
+          <input
+            required
+            onclick="escondeEndereco()"
+            type="radio"
+            requer
+            id="pj"
+            name="documento"
+            value="CNPJ"
+          />
+        </div>
+        <div>
+          <label>Consumo Local</label>
+          <input
+            required
+            type="radio"
+            onclick="escondeEndereco()"
+            requer
+            id="pf"
+            name="documento"
+            value="CPF"
+          />
+        </div>
+        <div id="endereco">
+          <h2>Endereço</h2>
+          <div class="form-group1">
+            <input type="text" required /><label>Rua</label>
+          </div>
+          <div class="form-group1">
+            <label>Estado</label>
+            <select required name="estados" id="Estado">
+              <option value="SP">SP</option>
+            </select>
+          </div>
+          <div class="form-group1">
+            <input type="text" required /><label>Cidade</label>
+          </div>
+          <div class="form-group1">
+            <input type="text" required /><label
+              >Número</label
+            >
+          </div>
+          <div class="form-group1">
+            <input
+              type="text"
+              class="form-control"
+              onkeypress="$(this).mask('00.000-000')"
+              required
+              minlength="10"
+            />
+            <label>CEP</label>
+          </div>
+        </div>
+    </div>
+    <div id="formasPagamento" class="container2">
+        <h2>Formas de Pagamento</h2>
+        <div>
+          <label>Dinheiro</label>
+          <input
+            required
+            type="radio"
+            onclick="cpf()"
+            requer
+            id="pf"
+            name="documento"
+            value="CPF"
+          />
+        </div>
+        <div>
+          <label>Cartão</label>
+          <input
+            required
+            onclick="cnpj()"
+            type="radio"
+            requer
+            id="pj"
+            name="documento"
+            value="CNPJ"
+          />
+        </div>
+        <div>
+          <label>PIX</label>
+          <input
+            required
+            type="radio"
+            onclick="cpf()"
+            requer
+            id="pf"
+            name="documento"
+            value="CPF"
+          />
+        </div>
+        <button class="submit1" type="button">Confirma</button>
+    </div>
     </form>
+    <script src="JS/cliente.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
   </body>
 </html>
